# modgeo

./: README.md  README.team
ProgressiveMeshes/: Makefile  acquisition.c  acquisition.h  constructeurs.c  constructeurs.h  golf.sh  hyp.sh  information.c  information.h  listes.c  listes.h  pm.c  pm.h  rec_mesh.wrl  simpl_mesh.wrl  sortie.c  sortie.h  sortie_bis.c  sortie_bis.h  test.c  test.h  test.sh  test_acquisition.res  test_acquisition_sortie  test_acquisition_sortie.c  test_pm  test_pm.c  test_pm.sh  test_prog.c
ProgressiveMeshes/NGB/: golfclub.ngb  hypersheet.ngb  ico.ngb  (+1 more)
canva_projet/: CMakeLists.txt  Read_me  ui_mainwindow.h  ui_mesh_debug.h
canva_projet/data/: Readme  cube.obj~  dino_0.off  tux.off
canva_projet/gui/: mainwindow.ui  mesh_debug.ui
canva_projet/lib3d/: exception_proj.cpp  exception_proj.hpp  matrix2.cpp  matrix2.hpp  matrix3.cpp  matrix3.hpp  matrix4.cpp  matrix4.hpp  quaternion.cpp  quaternion.hpp  v2.cpp  v2.hpp  v3.cpp  v3.hpp  v4.cpp  v4.hpp
canva_projet/libmesh/: bounded_priority_queue.h  facet.cpp  facet.hpp  half_edge.cpp  half_edge.hpp  mesh.cpp  mesh.hpp  mesh_io.cpp  mesh_io.hpp  opengl_drawer.cpp  opengl_drawer.hpp  testhe.cpp  testhe.hpp  vertexpair.h
canva_projet/libnavigation/: navigator_tool.cpp  navigator_tool.hpp  trackball.cpp  trackball.hpp
canva_projet/local/: debug_mesh.cpp  debug_mesh.hpp  glwidget.cpp  glwidget.hpp  main.cpp  moc_glwidget.cxx_parameters  moc_window.cxx_parameters  moc_window_mesh_debug.cxx_parameters  scene.cpp  scene.hpp  window.cpp  window.hpp  window_mesh_debug.cpp  window_mesh_debug.hpp
(+1 files in other folders)
